[gd_scene load_steps=9 format=3 uid="uid://ch6i200srns87"]

[ext_resource type="PackedScene" uid="uid://oj2458hw4fo7" path="res://gun_guy.tscn" id="1_4y1ey"]
[ext_resource type="Script" path="res://chooser.gd" id="1_u3iuc"]
[ext_resource type="PackedScene" uid="uid://cuckgvmgyddcn" path="res://shield_guy.tscn" id="2_ekr7g"]
[ext_resource type="Theme" uid="uid://dxjexkir763tj" path="res://chooser.theme" id="2_sj0n6"]
[ext_resource type="PackedScene" uid="uid://b850vwiej2rxe" path="res://sword_guy.tscn" id="3_f5i62"]
[ext_resource type="PackedScene" uid="uid://dyqjkci67in0j" path="res://fan_guy.tscn" id="5_bumr1"]
[ext_resource type="PackedScene" uid="uid://bswqildu1012y" path="res://arrow_guy.tscn" id="6_3efc1"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ajcfd"]

[node name="Chooser" type="Node"]
script = ExtResource("1_u3iuc")

[node name="Background" type="Polygon2D" parent="."]
position = Vector2(-5.96046e-08, 119.889)
scale = Vector2(1, 0.888992)
color = Color(3.36915e-07, 0.564263, 0.327003, 1)
polygon = PackedVector2Array(-1, -1, 1922, 1, 1919, 1077, 0, 1080)

[node name="Background2" type="Polygon2D" parent="."]
position = Vector2(-5.96046e-08, 119.889)
scale = Vector2(1, 0.888992)
color = Color(3.36915e-07, 0.564263, 0.327003, 1)
polygon = PackedVector2Array(-1, -1, 1922, 1, 1919, 1077, 0, 1080)

[node name="Label" type="Label" parent="."]
offset_left = 747.0
offset_top = 118.0
offset_right = 1093.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 50
text = "pick your guys"

[node name="Slots" type="Node" parent="."]

[node name="Slot1" type="Polygon2D" parent="Slots"]
position = Vector2(220.406, 240.18)
scale = Vector2(0.898497, 0.909804)
texture = SubResource("CanvasTexture_ajcfd")
polygon = PackedVector2Array(5.22891, -0.734497, 269.229, -0.734497, 269.229, 255.266, 5.22889, 255.266)
uv = PackedVector2Array(6.22595, 2, 266.661, 2, 268.887, 254.802, 5.11298, 255.901)

[node name="Label" type="Label" parent="Slots/Slot1"]
offset_left = 126.0
offset_top = -46.0
offset_right = 144.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 32
text = "1"

[node name="Slot2" type="Polygon2D" parent="Slots"]
position = Vector2(517, 241)
scale = Vector2(0.898497, 0.909804)
texture = SubResource("CanvasTexture_ajcfd")
polygon = PackedVector2Array(5.22891, -0.734497, 269.229, -0.734497, 269.229, 255.266, 5.22889, 255.266)
uv = PackedVector2Array(6.22595, 2, 266.661, 2, 268.887, 254.802, 5.11298, 255.901)

[node name="Label" type="Label" parent="Slots/Slot2"]
offset_left = 126.0
offset_top = -46.0
offset_right = 144.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 32
text = "2
"

[node name="Slot3" type="Polygon2D" parent="Slots"]
position = Vector2(805, 240)
scale = Vector2(0.898497, 0.909804)
texture = SubResource("CanvasTexture_ajcfd")
polygon = PackedVector2Array(5.22891, -0.734497, 269.229, -0.734497, 269.229, 255.266, 5.22889, 255.266)
uv = PackedVector2Array(6.22595, 2, 266.661, 2, 268.887, 254.802, 5.11298, 255.901)

[node name="Label" type="Label" parent="Slots/Slot3"]
offset_left = 126.0
offset_top = -46.0
offset_right = 144.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 32
text = "3"

[node name="Slot4" type="Polygon2D" parent="Slots"]
position = Vector2(1089, 240)
scale = Vector2(0.898497, 0.909804)
texture = SubResource("CanvasTexture_ajcfd")
polygon = PackedVector2Array(5.22891, -0.734497, 269.229, -0.734497, 269.229, 255.266, 5.22889, 255.266)
uv = PackedVector2Array(6.22595, 2, 266.661, 2, 268.887, 254.802, 5.11298, 255.901)

[node name="Label" type="Label" parent="Slots/Slot4"]
offset_left = 126.0
offset_top = -46.0
offset_right = 144.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 32
text = "4
"

[node name="Slot5" type="Polygon2D" parent="Slots"]
position = Vector2(1366, 240)
scale = Vector2(0.898497, 0.909804)
texture = SubResource("CanvasTexture_ajcfd")
polygon = PackedVector2Array(5.22891, -0.734497, 269.229, -0.734497, 269.229, 255.266, 5.22889, 255.266)
uv = PackedVector2Array(6.22595, 2, 266.661, 2, 268.887, 254.802, 5.11298, 255.901)

[node name="Label" type="Label" parent="Slots/Slot5"]
offset_left = 126.0
offset_top = -46.0
offset_right = 144.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 32
text = "5
"

[node name="Buttons" type="Node" parent="."]

[node name="Button1" type="Button" parent="Buttons"]
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.618
anchor_right = 0.199
anchor_bottom = 0.869
offset_left = -0.0400085
offset_top = -13.4399
offset_right = 0.919983
offset_bottom = 0.47998
theme = ExtResource("2_sj0n6")

[node name="ShieldGuy" parent="Buttons/Button1" instance=ExtResource("2_ekr7g")]
position = Vector2(80, 65)
speed = 0

[node name="Button2" type="Button" parent="Buttons"]
anchors_preset = -1
anchor_left = 0.228
anchor_top = 0.618
anchor_right = 0.366
anchor_bottom = 0.865
offset_left = 0.23996
offset_top = -13.4399
offset_right = -0.720032
offset_bottom = 6.79993
theme = ExtResource("2_sj0n6")

[node name="SwordGuy" parent="Buttons/Button2" instance=ExtResource("3_f5i62")]
position = Vector2(80, 65)
speed = 0

[node name="attack hint" type="Label" parent="Buttons/Button2"]
layout_mode = 0
offset_left = 223.0
offset_top = 237.0
offset_right = 263.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "*"

[node name="Button3" type="Button" parent="Buttons"]
anchors_preset = -1
anchor_left = 0.556
anchor_top = 0.618
anchor_right = 0.694
anchor_bottom = 0.873
offset_left = 0.479858
offset_top = -10.4399
offset_right = -0.47998
offset_bottom = 0.159973
theme = ExtResource("2_sj0n6")

[node name="GunGuy" parent="Buttons/Button3" instance=ExtResource("1_4y1ey")]
position = Vector2(80, 65)
speed = 0

[node name="attack hint" type="Label" parent="Buttons/Button3"]
offset_left = 223.0
offset_top = 237.0
offset_right = 263.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "*"

[node name="Button4" type="Button" parent="Buttons"]
anchors_preset = -1
anchor_left = 0.396
anchor_top = 0.606
anchor_right = 0.534
anchor_bottom = 0.87
offset_left = 0.679932
offset_top = -0.479919
offset_right = -0.280029
offset_bottom = 0.399963
theme = ExtResource("2_sj0n6")

[node name="FanGuy" parent="Buttons/Button4" instance=ExtResource("5_bumr1")]
position = Vector2(80, 65)
speed = 0

[node name="Button5" type="Button" parent="Buttons"]
anchors_preset = -1
anchor_left = 0.722
anchor_top = 0.618
anchor_right = 0.86
anchor_bottom = 0.88
offset_left = 0.759888
offset_top = -9.43994
offset_right = -0.200073
offset_bottom = -0.400085
theme = ExtResource("2_sj0n6")

[node name="ArrowGuy" parent="Buttons/Button5" instance=ExtResource("6_3efc1")]
position = Vector2(80, 65)
speed = 0

[node name="attack hint" type="Label" parent="Buttons/Button5"]
offset_left = 223.0
offset_top = 237.0
offset_right = 263.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "*"

[node name="GoButton" type="Button" parent="."]
offset_left = 1681.0
offset_top = 282.0
offset_right = 1784.0
offset_bottom = 401.0
theme_override_font_sizes/font_size = 81
disabled = true
text = "go"

[node name="Label2" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.387
anchor_top = 0.908
anchor_right = 0.574
anchor_bottom = 0.95
offset_left = 15.96
offset_top = 0.359924
offset_right = 0.920044
theme_override_font_sizes/font_size = 32
text = "* tap or click to attack"

[connection signal="pressed" from="Buttons/Button1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GoButton" to="." method="_on_go_button_pressed"]
